    [lgraf]
  - Refactored document overview.
    [lgraf]
  - Implement document metadata behavior for mail (incl. upgrade step and init event).
    [mathias.leimgruber]
  - Show classification infos on document overview tab.
    [mathias.leimgruber]
  - Customized document default view in order to render `file`
    field in NO_DOWNLOAD_DISPLAY_MODE.
    [lgraf]


- Changes to journaling:

  - Fix double journal entries using quickupload.
    [mathias.leimgruber]
  - Journalize any changes to `public_trial` field.
    [lgraf]
  - Journal: Listen on IBaseDocument instead of IDocumentSchema - mails are now also
    considered documentish and should be treated equally.
    [lgraf]
  - Journalize AttachmentsDeleted event.
    [lgraf]


- Changes related to mail content type:

  - Implement tabbedview for ftw.mail.mail content (Preview / Journal / Info).
    [mathias.leimgruber]
  - Use IDocumentNameFromTitle behavior from document also for mail.
    [mathias.leimgruber]
  - Use document byline also on mail.
    [mathias.leimgruber]
  - Add classification behavior to mail.
    [mathias.leimgruber]
  - Add overview tab for mail (shows some basic metadata).
    [mathias.leimgruber]
  - File a copy of the mail in the dossier by default when sending documents from GEVER.
    [lgraf]
  - Hide duplicate mail title in mail preview tab.
    [lgraf]
  - Add plone.app.lockingbehavior to ftw.mail.mail FTI.
    [lgraf]
  - Add 'Edit Metadata' action to ftw.mail.mail FTI.
    [lgraf]
  - Override ftw.mail default view with our customized dexterity default view.
    [lgraf]
  - Make FileOrPaperValidator consider mails properly (always digitally available).
    [lgraf]
  - Disable the editable border for the extract attachments view.
    [lgraf]
  - Improved wording of German translations in extract attachments view.
    [lgraf]
  - Added new mail event `AttachmentsDeleted`.
    [lgraf]
  - Mail overview: display the original message including a download link.
    [phgross]